jilles      2006/07/09 16:32:21 UTC	(20060709-5820)
  Log:
  vhost help files: vhosts apply on login, not on connect
  

  Changes:	Modified:
  +1 -1		trunk/help/nickserv/vhost (File Modified) 
  +1 -1		trunk/help/userserv/vhost (File Modified) 


beu         2006/07/09 16:29:21 UTC	(20060709-5818)
  Log:
  Synchronise userserv and nickserv help files.
  

  Changes:	Modified:
  +1 -1		trunk/help/nickserv/logout (File Modified) 
  +1 -1		trunk/help/nickserv/set_emailmemos (File Modified) 
  +1 -2		trunk/help/nickserv/set_password (File Modified) 
  +4 -3		trunk/help/userserv/drop (File Modified) 
  +2 -2		trunk/help/userserv/info (File Modified) 
  +4 -1		trunk/help/userserv/register (File Modified) 
  +0 -1		trunk/help/userserv/verify (File Modified) 
  +6 -5		trunk/help/userserv/vhost (File Modified) 


jilles      2006/07/09 16:05:52 UTC	(20060709-5812)
  Log:
  Remove last bold Example(s): from help files.
  

  Changes:	Modified:
  +3 -3		trunk/help/oservice/akill (File Modified) 
  +1 -1		trunk/help/oservice/ignore (File Modified) 


beu         2006/07/09 15:22:57 UTC	(20060709-5810)
  Log:
  Spelling/grammatical fixes.
  

  Changes:	Modified:
  +1 -1		trunk/help/nickserv/drop (File Modified) 
  +1 -1		trunk/help/oservice/akill (File Modified) 


beu         2006/07/09 15:02:40 UTC	(20060709-5808)
  Log:
  Grammatical fix.
  

  Changes:	Modified:
  +5 -5		trunk/help/cservice/flags (File Modified) 


beu         2006/07/09 14:42:47 UTC	(20060709-5806)
  Log:
  Revert silly "all Examples: are bold" commit (from r5770).
  

  Changes:	Modified:
  +1 -1		trunk/help/oservice/inject (File Modified) 
  +1 -1		trunk/help/oservice/jupe (File Modified) 
  +1 -1		trunk/help/oservice/mode (File Modified) 
  +1 -1		trunk/help/oservice/modinspect (File Modified) 
  +1 -1		trunk/help/oservice/modload (File Modified) 
  +1 -1		trunk/help/oservice/modunload (File Modified) 
  +2 -2		trunk/help/oservice/noop (File Modified) 
  +1 -1		trunk/help/oservice/raw (File Modified) 